Version 0.13.3~dev

	* Replace database schema by a postgres dump.
	* Update database schema with new defaults and constraints.
	* Drop old migration snippets and unrelated schema updates.

Version 0.13.2 Released on 2011/10/06

	* Fix next_check_expired parameter handling, closes: #4950.

Version 0.13.1 Released on 2011/10/03

	* Fix get_checks method, when 'params' is None, closes: #4884.
	* Fix unit test get_status and get_checks.

Version 0.13.0 Released on 2011/09/08

	* Fix the Authors section of README.rst.
	* Add missing COPYING.
	* Change reschedule_check to allow adding a delay, closes: #4626.
	* Re-sync documentation with code.
	* Fix a typo in delay code for reschedule_check, refs: #4626.

Version 0.12.1 Released on 2011/04/26

	* Release under the LGPL 2.1.

Version 0.12.0 Released on 2011/04/26

	* Split collect code into its own webengine package.

Version 0.11.0 Released on 2011/03/09

	* Adapt to new widgets and templates system.
	* Enhanced reschedule_check to take a batch of status_id,
	  closes: #3737.
	* Create internal api methods for get_groups and get_objects and
	  wrap them into exposed webengine methods, refs: #3927.
	* Add methods to manage objects-groups and relations, closes: #3927.
	* Fix some typographic mistakes in services.py, refs: 3927.
	* Add an option to get_groups to make it return associated objects,
	  closes: #3947.
	* Change behavior of get_status to always returns same kind of dictionaries,
	  refs: #3942.
	* Adapt get_checks to keep old behavior, refs: #3942.
	* Add private functions for future cleaning of get_status, refs: #3942.
	* Fix one typographic mistake in OBJECT_INFOS_FIELDS, refs: #3942.
	* Add list STATUS_INFOS_FIELDS for new private functions, refs: #3942.
	* Clean get_status and use new private functions , refs: #3942.
	* Add appropriate test suite items, closes: #3942.
	* Droped get_detailed_infos option, refs: #3942.
	* Fix bug in _get_queries_and_result_rows, refs: #3942.